code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__help_chinese.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 90, 24))"
---
  .                                                                     [— / —] [仪 表 盘 ]  
                                                                                          
  ╭────────┌── 帮 助  ─────────────────────────────────────────────────────[✗]─┐─────────╮  
  │        │                                                                 │         │  
  │    ▄  ▄│   快 捷 键     命 令     自 定 义 命 令                                   │         │  
  │  ▗█▛██▜│                                                                 │         │  
  │  ▝▜████│  ╭────────────────────────────────────────────────────────────╮ │         │  
  │    ▝  ▘│  │ 搜 索 帮 助                                                    │ │         │  
  │        │  ╰────────────────────────────────────────────────────────────╯ │         │  
  │        │> shift+tab  ·  切 换 批 准 模 式                                      │         │  
  │        │  ctrl+v  ·  附 加 剪 贴 板 图 片                                       │         │  
  │        │  ctrl+c  ·  中 断 或 退 出                                           │         │  
  │        │  ctrl+d  ·  中 断 或 退 出                                           │         │  
  │        │  ctrl+o  ·  复 制 上 一 条 回 复                                       │         │  
  ╰────────│  ctrl+z  ·  挂 起  Ash                                            │─────────╯  
           │  ctrl+r  ·  搜 索 输 入 历 史 ； Enter 编 辑 匹 配 项 ， Esc 恢 复 草 稿         │            
           │  Esc Esc  ·  输 入 为 空 时 打 开 回 退 检 查 点                            │            
           │  ↑/k · ↓/j  ·  浏 览 聚 焦 的 列 表 或 只 读 内 容 ； 在 编 辑 器 中 按 字 母 仍 会 输  │            
           │  4 项  下 方                                                       │选 择 操 作 。   
  ─────────│  Tab/Shift+Tab 切 换   ·  / 搜 索   ·  Esc 关 闭                      │──────────  
  > 构 建 任 何 ─────────────────────────────────────────────────────────────────┘            
  ──────────────────────────────────────────────────────────────────────────── 自 动 模 型
