code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_actions.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: text(&buffer)
---
  .                                                                                                                    [— / —] [Dashboard]  
                                                                                                                                            
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │                                                                                                                                      │  
  │    ▄  ▄      Ash Code v0.1.0                                                                                                         │  
  │  ▗█▛██▜█▖                                                                                                                            │  
  │  ▝▜████▛▘    Start a task below, or continue a previous session.                                                                     │  
  │    ▝  ▘                                                                                                                              │  
  │            > New worktree                                                                                                            │  
  │              Resume session                                                                                                          │  
  │              Settings                                                                                                                │  
  │              Help and shortcuts                                                                                                      │  
  │              Quit                                                                                                                    │  
  │                                                                                                                                      │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
  ⏸ ask permissions on                                                               Type a task to begin, or use Tab to choose an action.  
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  > Build anything                                                                                                                          
  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                                                            
  Enter select  ·  ↑↓ actions  ·  Esc input
