code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_after_shift_tab.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │                                                                          │  
  │    ▄  ▄      Ash Code v0.1.0                                             │  
  │  ▗█▛██▜█▖                                                                │  
  │  ▝▜████▛▘    Start a task below, or continue a previous session.         │  
  │    ▝  ▘                                                                  │  
  │              New worktree                                                │  
  │              Resume session                                              │  
  │              Settings                                                    │  
  │              Help and shortcuts                                          │  
  │              Quit                                                        │  
  │                                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
                                                                                
                                                                                
                                                                                
  ⏸ Manual               Type a task to begin, or use Tab to choose an action.  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ──────────────────────────────────────────────────── Automatic model · Plan   
                                                                                
  Enter send  ·  Tab actions  ·  / commands
