code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_dashboard_session_manager.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
  Archived (0)                                                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  Esc to return
