code/tui/src/app/fullscreen/snapshots/app__fullscreen__home__tests__home_new_branch_prompt.snap
---
source: code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
  ╭─────┌── New branch ────────────────────────────────────────────[✗]─┐─────╮  
  │     │                                                              │     │  
  │    ▄│  Create branch                                               │     │  
  │  ▗█▛│                                                              │     │  
  │  ▝▜█│  ╭─────────────────────────────────────────────────────────╮ │     │  
  │    ▝│  │ ash/                                                    │ │     │  
  │     │  ╰─────────────────────────────────────────────────────────╯ │     │  
  │     │  Create a branch at HEAD without switching worktrees.        │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  │     │                                                              │     │  
  ╰─────│                                                              │─────╯  
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │ction.  
  ╭─────│  Enter to create  ·  Esc to close                            │─────╮  
  │ > Bu└──────────────────────────────────────────────────────────────┘     │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯
